# rustweb

./: Cargo.toml  README.md
static/css/: style.css
templates/: base.html  file_list.html  info.html
