[package]
name = "axum-hello"
version = "0.1.0"
edition = "2021"
default-run = "axum-hello"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.6"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

#序列化crate
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
#
askama = "0.11"
#文件目录访问crate
walkdir = "1"

[[bin]]
name = "json"

[[bin]]
name = "service1"

[[bin]]
name = "say-hello"